# lab2_sp

./: CMakeLists.txt  MakeFile  README.md  build.ninja  main.cpp  rules.ninja
